k8s/dev/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: employee-dev
  labels:
    app: employee-management-frontend
    environment: dev
spec:
  type: ClusterIP
  selector:
    app: employee-management-frontend
    environment: dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
