k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: employee-dev
  labels:
    app: employee-management
    environment: dev
spec:
  type: ClusterIP
  selector:
    app: employee-management
    environment: dev
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
